--- a/src/jobs/create-stack.yml
+++ b/src/jobs/create-stack.yml
@@ -1,5 +1,8 @@
   description: |
-    Install and configure aws-cli and execute aws cloudformation create-stack command
+    Install and configure aws-cli and execute aws cloudformation commands
+
+  executor:
+    name: default
 
   parameters:
     stack-name:
@@ -12,9 +15,17 @@
         CloudFormation template file path
       type: string
 
+    branch:
+      description: |
+        Git branch of retrieving GitHub URL of CloudFormation
+         template file
+      type: string
+      default: master
+
     extra-arguments:
       description: |
-        Optional additional arguments to pass to the `aws cloudformation create-stack` command
+        Optional additional arguments to pass to the `aws 
+        cloudformation create-stack` command
       type: string
       default: ""
 
@@ -24,19 +35,52 @@
       type: string
       default: ""
 
-    branch:
+    aws-access-key-id:
       description: |
-        Git branch of retrieving GitHub URL of CloudFormation template file
-      type: string
-      default: "master"
+        AWS access key id for IAM role. Set this to the name of
+        the environment variable you will use to hold this
+        value, i.e. AWS_ACCESS_KEY.
+      type: env_var_name
+      default: AWS_ACCESS_KEY_ID
 
-  executor:
-    name: default
+    aws-secret-access-key:
+      description: |
+        AWS secret key for IAM role. Set this to the name of
+        the environment variable you will use to hold this
+        value, i.e. $AWS_SECRET_ACCESS_KEY.
+      type: env_var_name
+      default: AWS_SECRET_ACCESS_KEY
+
+    aws-region:
+      description: |
+        Env var of AWS region to operate in
+        (defaults to AWS_DEFAULT_REGION)
+      type: env_var_name
+      default: AWS_DEFAULT_REGION
+
+    profile-name:
+      description: Profile name to be configured.
+      type: string
+      default: "default"
+
+    configure-default-region:
+      description: |
+        Some AWS actions don't require a region; set this to false if you do not want to store a default region in ~/.aws/config
+      type: boolean
+      default: true
 
   steps:
     - aws-cli/install
-    - aws-cli/configure
+
+    - aws-cli/configure:
+        aws-access-key-id: <<parameters.aws-access-key-id>>
+        aws-secret-access-key: <<parameters.aws-secret-access-key>>
+        aws-region: <<parameters.aws-region>>
+        profile-name: <<parameters.profile-name>>
+        configure-default-region: <<parameters.configure-default-region>>
+
     - checkout
+
     - create-stack:
         stack-name: <<parameters.stack-name>>
         template-file-path: <<parameters.template-file-path>>
