--- a/src/jobs/delete-stack.yml
+++ b/src/jobs/delete-stack.yml
@@ -1,17 +1,58 @@
   description: |
     Install and configure aws-cli and execute aws cloudformation delete-stack command
 
+  executor:
+    name: default
+
   parameters:
     stack-name:
       description: |
         CloudFormation stack name
       type: string
 
-  executor:
-    name: default
+    aws-access-key-id:
+      description: |
+        AWS access key id for IAM role. Set this to the name of
+        the environment variable you will use to hold this
+        value, i.e. AWS_ACCESS_KEY.
+      type: env_var_name
+      default: AWS_ACCESS_KEY_ID
+
+    aws-secret-access-key:
+      description: |
+        AWS secret key for IAM role. Set this to the name of
+        the environment variable you will use to hold this
+        value, i.e. $AWS_SECRET_ACCESS_KEY.
+      type: env_var_name
+      default: AWS_SECRET_ACCESS_KEY
+
+    aws-region:
+      description: |
+        Env var of AWS region to operate in
+        (defaults to AWS_DEFAULT_REGION)
+      type: env_var_name
+      default: AWS_DEFAULT_REGION
+
+    profile-name:
+      description: Profile name to be configured.
+      type: string
+      default: "default"
+
+    configure-default-region:
+      description: |
+        Some AWS actions don't require a region; set this to false if you do not want to store a default region in ~/.aws/config
+      type: boolean
+      default: true
 
   steps:
     - aws-cli/install
-    - aws-cli/configure
+
+    - aws-cli/configure:
+        aws-access-key-id: <<parameters.aws-access-key-id>>
+        aws-secret-access-key: <<parameters.aws-secret-access-key>>
+        aws-region: <<parameters.aws-region>>
+        profile-name: <<parameters.profile-name>>
+        configure-default-region: <<parameters.configure-default-region>>
+
     - delete-stack:
         stack-name: <<parameters.stack-name>>
