--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,9 +77,17 @@ workflows:
           requires:
             - cloudformation/create-stack
           stack-name: circleci-test-git-url
-      - cloudformation/delete-stack:
+      - cloudformation/deploy:
           requires:
             - cloudformation/describe-stacks
+          stack-name: circleci-test-git-url
+          aws-access-key-id: AWS_ACCESS_KEY_ID2
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY2
+          aws-region: AWS_DEFAULT_REGION
+          parameter-overrides: InstanceType=t2.medium
+      - cloudformation/delete-stack:
+          requires:
+            - cloudformation/deploy
           stack-name: circleci-test-git-url
           aws-access-key-id: AWS_ACCESS_KEY_ID2
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY2
