--- a/src/jobs/deploy.yml
+++ b/src/jobs/deploy.yml
@@ -88,6 +88,7 @@
       description: |
         CloudFormation template file path
       type: string
+      default: ""
 
   steps:
     - aws-cli/install
