--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ workflows:
       - cloudformation/deploy:
           requires:
             - cloudformation/describe-stacks
-          stack-name: circleci-test-git-url
+          stack-name: circleci-test-checkout
           template-file-path: tests/checkout-test-cfn-template.yaml
           aws-access-key-id: AWS_ACCESS_KEY_ID2
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY2
