--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ workflows:
           aws-region: AWS_DEFAULT_REGION
       - cloudformation/delete-stack:
           requires:
-            - cloudformation/describe-stacks
+            - cloudformation/deploy
           stack-name: circleci-test-checkout-2
 
   test-git-url:
