--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ workflows:
       - cloudformation/deploy:
           requires:
             - cloudformation/describe-stacks
-          stack-name: circleci-test-checkout
+          stack-name: circleci-test-checkout-2
           template-file-path: tests/checkout-test-cfn-template-update.yaml
           aws-access-key-id: AWS_ACCESS_KEY_ID2
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY2
